# rust-ec2-build-test

./: Cargo.toml  README.md
.github/workflows/: blank.yml
src/: main.rs
