[package]
name = "target-registration"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["cargo", "derive"] }
log = "0.4"
env_logger = "0.11.6"
aws-config = { version = "1.5.17", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1.113.0"
aws-sdk-elasticloadbalancingv2 = "1.68.0"
tokio = { version = "1", features = ["full"] }
